exports[`invalid(1): {\"exports\": {\".\": [\"./a.js\", \"./b.js\"]}} 1`] = `

[Input]
  1 | {"exports": {".": ["./a.js", "./b.js"]}}

`;

exports[`invalid(1): {\"exports\": {\".\": [\"./a.js\", \"./b.js\"]}} 2`] = `

Message:
> 1 | {"exports": {".": ["./a.js", "./b.js"]}}
    |                   ^^^^^^^^^^^^^^^^^^^^ String-target fallback arrays in \`exports\` do not try the next target when the first file is missing in Node.js.

`;

exports[`invalid(2): {\"imports\": {\"#dep\": [\"./a.js\", \"./b.js\"]}} 1`] = `

[Input]
  1 | {"imports": {"#dep": ["./a.js", "./b.js"]}}

`;

exports[`invalid(2): {\"imports\": {\"#dep\": [\"./a.js\", \"./b.js\"]}} 2`] = `

Message:
> 1 | {"imports": {"#dep": ["./a.js", "./b.js"]}}
    |                      ^^^^^^^^^^^^^^^^^^^^ String-target fallback arrays in \`imports\` do not try the next target when the first file is missing in Node.js.

`;

exports[`invalid(3): {\n\t\"exports\": {\n\t\t\".\": {\n\t\t\t\"import\": [\"./import.js\", \"./fallback.js\"]\n\t\t}\n\t}\n} 1`] = `

[Input]
  1 | {
  2 | 	"exports": {
  3 | 		".": {
  4 | 			"import": ["./import.js", "./fallback.js"]
  5 | 		}
  6 | 	}
  7 | }

`;

exports[`invalid(3): {\n\t\"exports\": {\n\t\t\".\": {\n\t\t\t\"import\": [\"./import.js\", \"./fallback.js\"]\n\t\t}\n\t}\n} 2`] = `

Message:
  1 | {
  2 | 	"exports": {
  3 | 		".": {
> 4 | 			"import": ["./import.js", "./fallback.js"]
    | 			          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ String-target fallback arrays in \`exports\` do not try the next target when the first file is missing in Node.js.
  5 | 		}
  6 | 	}
  7 | }

`;

exports[`invalid(4): {\n\t\"exports\": [\n\t\t\"./a.js\",\n\t\t\"./b.js\"\n\t]\n} 1`] = `

[Input]
  1 | {
  2 | 	"exports": [
  3 | 		"./a.js",
  4 | 		"./b.js"
  5 | 	]
  6 | }

`;

exports[`invalid(4): {\n\t\"exports\": [\n\t\t\"./a.js\",\n\t\t\"./b.js\"\n\t]\n} 2`] = `

Message:
  1 | {
> 2 | 	"exports": [
    | 	           ^
> 3 | 		"./a.js",
    | ^^^^^^^^^^^
> 4 | 		"./b.js"
    | ^^^^^^^^^^
> 5 | 	]
    | ^^ String-target fallback arrays in \`exports\` do not try the next target when the first file is missing in Node.js.
  6 | }

`;

exports[`invalid(5): {\n\t\"imports\": {\n\t\t\"#dep\": [\n\t\t\t[\"./a.js\", \"./b.js\"]\n\t\t]\n\t}\n} 1`] = `

[Input]
  1 | {
  2 | 	"imports": {
  3 | 		"#dep": [
  4 | 			["./a.js", "./b.js"]
  5 | 		]
  6 | 	}
  7 | }

`;

exports[`invalid(5): {\n\t\"imports\": {\n\t\t\"#dep\": [\n\t\t\t[\"./a.js\", \"./b.js\"]\n\t\t]\n\t}\n} 2`] = `

Message:
  1 | {
  2 | 	"imports": {
  3 | 		"#dep": [
> 4 | 			["./a.js", "./b.js"]
    | 			^^^^^^^^^^^^^^^^^^^^ String-target fallback arrays in \`imports\` do not try the next target when the first file is missing in Node.js.
  5 | 		]
  6 | 	}
  7 | }

`;
